--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(154, 111, 58, 0.85);
 }
 
 h1, h2 {
